Added click function to TodoList cards, and added navigation to project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/TodoList"
         android:name="com.example.todolist.views.todoListView.TodoListFragment"
         android:layout_width="match_parent"
