--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".views.taskView.TaskFragment">
 
 
@@ -10,6 +11,5 @@
         android:id="@+id/taskRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/task_layout"
-        />
+        tools:listitem="@layout/task_layout" />
 </FrameLayout>
