--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -6,11 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
+    android:backgroundTint="@color/teal_700"
     android:clickable="true"
     android:focusable="true"
-    app:contentPadding="24dp"
     app:cardCornerRadius="4dp"
-    android:backgroundTint="@color/teal_700">
+    app:contentPadding="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,17 +20,15 @@
         <CheckBox
             android:id="@+id/task_checkBox"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/task_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:gravity="center"
-            tools:text="Task"
-            />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="Task" />
 
 
     </LinearLayout>
