--- a/app/src/main/res/layout/todo_list_fragment.xml
+++ b/app/src/main/res/layout/todo_list_fragment.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.taskView.TaskFragment">
+    tools:context=".views.todoListView.TodoListFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todoListRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/task_layout"
+        tools:listitem="@layout/todo_list_layout"
         />
 </FrameLayout>
