--- a/app/src/main/res/layout/todo_list_layout.xml
+++ b/app/src/main/res/layout/todo_list_layout.xml
@@ -6,11 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
+    android:backgroundTint="@color/teal_200"
     android:clickable="true"
     android:focusable="true"
-    app:contentPadding="24dp"
     app:cardCornerRadius="4dp"
-    android:backgroundTint="@color/teal_700">
+    app:contentPadding="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,10 +21,9 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:gravity="center"
-            tools:text="Task"
-            />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="TodoList" />
 
 
     </LinearLayout>
